--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -8,7 +8,7 @@
 
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>ECCSLG</title>
+	<title>ECC-SLG</title>
 	<link rel="shortcut icon" href="resources/imagens/SLG.ico" />
 	<h:outputStylesheet library="css" name="bootstrap.min.css" />
 	<h:outputScript library="js" name="bootstrap.min.js" />
@@ -16,7 +16,7 @@
 </h:head>
 <h:body style="background-color:#3f729b">
 	<h1>
-		<img src="resources/imagens/logoSLG.png" style="margin-left:20px;" />
+		<img src="resources/imagens/logo_ECC.png" style="margin-left:20px;" width="450" height="100" />
 	</h1>
 		<div class="container" align="center">
 		<div class="row">
