Ajustes menu e cadastro de círculos

--- a/src/main/webapp/administrador/menu.xhtml
+++ b/src/main/webapp/administrador/menu.xhtml
@@ -32,7 +32,7 @@
 <h:body style="background-color:#3f729b">
 	<h:form id="listagem">
 		<div id="menubar">
-			<li class="icone"><h:graphicImage library="imagens" name="logo_ECC.png" width="260" height="54" /></li>
+			<li class="icone"><h:graphicImage library="imagens" name="logo_ECC.png" width="400" height="72" /></li>
 			<ul>
 				<li><a><h:graphicImage library="imagens/menu"
 							style="width:35px; height:35px;" name="cadastros.png" />Cadastros</a>
@@ -40,20 +40,58 @@
 						<li><h:graphicImage library="imagens/menu"
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-								name="circulos.png" /><a href="circulos.xhtml">Circulos
+								name="circulos.png" /><a href="circulo.xhtml">Circulos
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-								name="equipes.png" /><a
-							href="equipes.xhtml">Equipes</a>
+								name="palestras.png" /><a
+							href="palestras.xhtml">Palestras</a>
 						</li>
 						<li><h:graphicImage library="imagens/menu"
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-								name="palestras.png" /><a
-							href="palestras.xhtml">Palestras</a></li>
-					</ul></li>
+								name="equipes.png" /><a
+							href="equipes.xhtml">Equipes</a></li>
+					</ul>
+				</li>
+				<li><a><h:graphicImage library="imagens/menu"
+									   style="width:35px; height:35px;" name="montagem.png" />Montagem</a>
+					<ul>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemEcc.png" /><a href="montagemEcc.xhtml">ECC
+						</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="fichas.png" /><a href="montagemFichas.xhtml">Fichas
+						</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemEquipes.png" /><a href="circulo.xhtml">Equipes
+						</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemCasais.png" /><a
+								href="montagemEncontristas.xhtml">Encontristas</a>
+						</li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemPalestrantes.png" /><a
+								href="montagemPalestrantes.xhtml">Palestrantes</a></li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="circulos.png" /><a
+								href="montagemCirculos.xhtml">Círculos</a></li>
+
+					</ul>
+				</li>
 			</ul>
 		</div>
 			<div id="status" style="...">
