Cadastro de palestras

--- a/src/main/webapp/administrador/menu.xhtml
+++ b/src/main/webapp/administrador/menu.xhtml
@@ -46,13 +46,13 @@
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 								name="palestras.png" /><a
-							href="palestras.xhtml">Palestras</a>
+							href="palestra.xhtml">Palestras</a>
 						</li>
 						<li><h:graphicImage library="imagens/menu"
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 								name="equipes.png" /><a
-							href="equipes.xhtml">Equipes</a></li>
+							href="equipe.xhtml">Equipes</a></li>
 					</ul>
 				</li>
 				<li><a><h:graphicImage library="imagens/menu"
