--- a/src/main/webapp/administrador/equipe.xhtml
+++ b/src/main/webapp/administrador/equipe.xhtml
@@ -30,10 +30,9 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="circulos.png" />
-							<a style="color: #808080; background: #a0c0de; opacity: 1;
-							filter: alpha(opacity = 100); border-bottom: 3px solid #b1b1b1;">Círculos</a></li>
-
+											name="circulos.png" /><a
+								href="circulo.xhtml">Circulos</a>
+						</li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
@@ -43,8 +42,9 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="equipes.png" /><a
-								href="equipe.xhtml">Equipes</a>
+											name="equipes.png" />
+							<a style="color: #808080; background: #a0c0de; opacity: 1;
+							filter: alpha(opacity = 100); border-bottom: 3px solid #b1b1b1;">Equipes</a>
 						</li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
@@ -58,10 +58,10 @@
 		<div id="status" style="...">
 			<div id="ico">
 				<h1>
-					<h:graphicImage library="imagens/menu" name="circulos.png"
+					<h:graphicImage library="imagens/menu" name="equipes.png"
 									width="25px" height="25px" />
 					<h5>
-						<b>Círculos</b>
+						<b>Equipes</b>
 					</h5>
 					<p:commandButton type="button" value="Sair" icon="ui-icon-extlink"
 									 style="float: right; margin-right:5px; margin-top: -5px;"
@@ -80,29 +80,39 @@
 		<p:growl id="growl" showDetail="true" sticky="false" life="2000" showSummary="false" autoUpdate="true" />
 		<br />	
 		<center>	
-		<p:panel header="Cadastro de Círculos"
+		<p:panel header="Cadastro de Equipes"
 			style="width:616px; background:#F1F2F5;">
 			<h:message />
-			<h:inputHidden value="#{circuloBean.circulo.id}" />
+			<h:inputHidden value="#{equipeBean.equipe.id}" />
 			<h:panelGrid columns="2">
 				<h:outputLabel value="Descrição:" for="descricao" />
-				<p:inputText id="descricao" value="#{circuloBean.circulo.descricao}"
+				<p:inputText id="descricao" value="#{equipeBean.equipe.descricao}"
 					required="true" requiredMessage="O campo Descrição é obrigatório"
-					maxlength="50" style="width:250px;">
+					maxlength="100" style="width:350px;">
 					<p:focus for="descricao" />
 				</p:inputText>
-				<h:outputLabel value="Tempo de Casado:" for="tempoCasado" />
-				<p:inputText id="tempoCasado" value="#{circuloBean.circulo.tempoCasado}"
-							 required="true" requiredMessage="O campo Tempo de Casado é obrigatório"
+				<h:outputLabel value="Sigla:" for="sigla" />
+				<p:inputText id="sigla" value="#{equipeBean.equipe.sigla}"
+							 required="true" requiredMessage="O campo Sigla é obrigatório"
+							 maxlength="5" style="width:35px;">
+				</p:inputText>
+				<h:outputLabel value="Mínimo de Casais:" for="minimoCasal" />
+				<p:inputText id="minimoCasal" value="#{equipeBean.equipe.minimoCasal}"
+							 required="true" requiredMessage="O campo Mínimo de Casais é obrigatório"
 							 maxlength="10" style="width:35px;">
 				</p:inputText>
-				<h:outputLabel value="Total de Casais:" for="totalCasal" />
-				<p:inputText id="totalCasal" value="#{circuloBean.circulo.totalCasais}"
-							 required="true" requiredMessage="O campo Total de Casais é obrigatório"
+				<h:outputLabel value="Máximo de Casais:" for="maximoCasal" />
+				<p:inputText id="maximoCasal" value="#{equipeBean.equipe.maximoCasal}"
+							 required="true" requiredMessage="O campo Máximo de Casais é obrigatório"
 							 maxlength="10" style="width:35px;">
 				</p:inputText>
+
+				<p:selectBooleanCheckbox value="#{equipeBean.equipe.automatica}" itemLabel="Automática?" style="margin-left:5px;" />
+				<p:selectBooleanCheckbox value="#{equipeBean.equipe.coordenador}" itemLabel="Coordenador?" style="margin-left:5px;" />
+				<p:selectBooleanCheckbox value="#{equipeBean.equipe.palestrante}" itemLabel="Palestrante?" style="margin-left:5px;" />
+				<p:selectBooleanCheckbox value="#{equipeBean.equipe.aptidao}" itemLabel="Aptidão?" style="margin-left:5px;" />
 				<h:outputLabel value="" />
-				<p:commandButton value="Salvar" action="#{circuloBean.salvar()}"
+				<p:commandButton value="Salvar" action="#{equipeBean.salvar()}"
 					icon="ui-icon-disk" process="@form" update=":listagem :edicao">
 				</p:commandButton>
 			</h:panelGrid>
@@ -112,29 +122,29 @@
 	<br />
 	<h:form id="listagem">
 		<center>
-		<p:dataTable value="#{circuloBean.lista}" var="circulo"
-			rendered="#{!empty circuloBean.lista}" style="width:620px;">
-			<p:column>
-				<f:facet name="header">Círculo</f:facet>
-				#{circulo.descricao}
+		<p:dataTable value="#{equipeBean.lista}" var="equipe"
+			rendered="#{!empty equipeBean.lista}" style="width:620px;">
+			<p:column headerText="Descrição" width="120">
+				<p:outputLabel value="#{equipe.descricao}"/>
+				<h:graphicImage library="imagens" name="automatica#{equipe.automatica}.png" width="15" height="15"
+								style="float: right;" />
+				<h:graphicImage library="imagens" name="aptidao.png" width="15" height="15" rendered="#{equipe.aptidao}"
+								style="float: right;" title="Aptidão"/>
+
 			</p:column>
-			<p:column>
-				<f:facet name="header">Tempo de Casado</f:facet>
-				#{circulo.tempoCasado}
-			</p:column>
-			<p:column>
-				<f:facet name="header">Total de Casais</f:facet>
-				#{circulo.totalCasais}
+			<p:column width="40">
+				<f:facet name="header">Sigla</f:facet>
+				#{equipe.sigla}
 			</p:column>
 			<p:column width="50">
 				<f:facet name="header">Ativo</f:facet>
 				<center>
-					<h:commandLink action="#{circuloBean.ativarInativar}">
+					<h:commandLink action="#{equipeBean.ativarInativar}">
 						<f:ajax execute="@this" render=":listagem" />
 						<h:graphicImage library="imagens"
-										name="#{circulo.ativo}.png" />
+										name="#{equipe.ativo}.png" />
 						<f:setPropertyActionListener
-								target="#{circuloBean.circulo}" value="#{circulo}" />
+								target="#{equipeBean.equipe}" value="#{equipe}" />
 					</h:commandLink>
 				</center>
 			</p:column>
@@ -143,25 +153,25 @@
 					<h:commandLink>
 						<f:ajax execute="@this" render=":edicao" />
 						<h:graphicImage library="imagens" name="alterar.png" />
-						<f:setPropertyActionListener target="#{circuloBean.circulo}"
-							value="#{circulo}" />
+						<f:setPropertyActionListener target="#{equipeBean.equipe}"
+							value="#{equipe}" />
 					</h:commandLink>
 				</center>
 			</p:column>
 
 			<p:column width="40" headerText="Excluir">
 				<center>
-					<h:commandLink action="#{circuloBean.excluir}"
-						onclick="if (!confirm('Confirma a exclusão do Círculo #{circulo.id}?')) return false;">
+					<h:commandLink action="#{equipeBean.excluir}"
+						onclick="if (!confirm('Confirma a exclusão da Equipe #{equipe.id}?')) return false;">
 						<f:ajax execute="@this" render=":listagem" />
 						<h:graphicImage library="imagens" name="remover.png" />
-						<f:setPropertyActionListener target="#{circuloBean.circulo}"
-							value="#{circulo}" />
+						<f:setPropertyActionListener target="#{equipeBean.equipe}"
+							value="#{equipe}" />
 					</h:commandLink>
 				</center>
 			</p:column>
 			<f:facet name="footer">
-				<p:outputLabel value="Quantidade de Círculos: #{circuloBean.lista.size()}"/>
+				<p:outputLabel value="Quantidade de Equipes: #{equipeBean.lista.size()}"/>
 			</f:facet>
 		</p:dataTable>
 		</center>
