--- a/src/main/webapp/administrador/menu.xhtml
+++ b/src/main/webapp/administrador/menu.xhtml
@@ -52,7 +52,14 @@
 								style="width:30px; height:30px; 
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 								name="equipes.png" /><a
-							href="equipe.xhtml">Equipes</a></li>
+							href="equipe.xhtml">Equipes</a>
+						</li>
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="usuarios.png" /><a
+								href="usuario.xhtml">Usuários</a>
+						</li>
 					</ul>
 				</li>
 				<li><a><h:graphicImage library="imagens/menu"
