--- a/src/main/webapp/administrador/menu.xhtml
+++ b/src/main/webapp/administrador/menu.xhtml
@@ -68,7 +68,7 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="montagemEcc.png" /><a href="montagemEcc.xhtml">ECC
+											name="montagemEcc.png" /><a href="../dirigente/ecc.xhtml">ECC
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
