--- a/src/main/webapp/dirigente/ecc.xhtml
+++ b/src/main/webapp/dirigente/ecc.xhtml
@@ -131,6 +131,11 @@
 												 onclick="PF('dlgNovoEcc').show()" update=":cadNovoEcc"
 												 process="@this"
 												 style="margin-right:15px; background-color:#a0c0de;"/>
+								<p:commandButton id="btnDetalhes" value="Detalhes"
+												 icon="ui-icon-newwin" style="margin-left: 5px;"
+												 onclick="PF('dlgEditarEcc').show()" update=":cadEditarEcc"
+												 title="Exibe todas as informações lançadas no ECC selecionado."
+												 disabled="#{eccBean.habilitaBotaoDetalhesEcc}"/>
 								<p:commandButton id="btnEditar" value="Editar"
 												 icon="ui-icon-pencil" style="margin-left: 5px;"
 												 onclick="PF('dlgEditarEcc').show()" update=":cadEditarEcc"
@@ -153,7 +158,7 @@
 					</f:facet>
 					<p:ajax event="rowSelect"
 							listener="#{eccBean.onRowSelectEcc}"
-							update="btnEditar btnExcluir btnIncluiDirigentes" />
+							update="btnEditar btnExcluir btnIncluiDirigentes btnDetalhes" />
 					<p:column width="30">
 						<f:facet name="header">Número</f:facet>
 						#{ecc.numero}
