Mudança de icones do menu

--- a/src/main/webapp/administrador/circulo.xhtml
+++ b/src/main/webapp/administrador/circulo.xhtml
@@ -59,7 +59,7 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="montagemEcc.png" /><a href="../dirigente/ecc.xhtml">ECC
+											name="ecc.png" /><a href="../dirigente/ecc.xhtml">ECC
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
@@ -85,7 +85,7 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="circulos.png" /><a
+											name="montagemCirculos.png" /><a
 								href="montagemCirculos.xhtml">Círculos</a></li>
 
 					</ul>
