--- a/src/main/webapp/administrador/menu.xhtml
+++ b/src/main/webapp/administrador/menu.xhtml
@@ -73,7 +73,7 @@
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
-											name="fichas.png" /><a href="montagemFichas.xhtml">Fichas
+											name="fichas.png" /><a href="../dirigente/montagemFicha.xhtml">Fichas
 						</a></li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
@@ -84,7 +84,7 @@
 											style="width:30px; height:30px;
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemCasais.png" /><a
-								href="montagemEncontristas.xhtml">Encontristas</a>
+								href="../dirigente/montagemEncontrista.xhtml">Encontristas</a>
 						</li>
 						<li><h:graphicImage library="imagens/menu"
 											style="width:30px; height:30px;
